--- a/area-sales.html
+++ b/area-sales.html
@@ -20,7 +20,7 @@
         </header>
 
         <div class="absolute inset-0 max-w-5xl mx-auto py-48 sm:py-16 md:py-8 -z-10">
-            <img src="mapimage.png">
+            <img src="./mapimage.png">
         </div>
 
         <!-- Карточки с информацией -->
