--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 </head>
 <body class="text-white font-sans" style="background-color: #1E1E1E; font-family: 'Manrope', serif; font-optical-sizing: auto;">
     <!-- Основной контейнер -->
-    <section class="max-w-5xl mx-auto p-8">
+    <section class="max-w-3xl mx-auto p-4 md:p-8">
 
         <!-- Заголовок и описание -->
-        <header class="py-2 mb-48 sm:mb-52 md:mb-60 lg:mb-72">
+        <header class="py-2 mb-48 sm:mb-52 md:mb-60 lg:mb-80">
             <h1 class="text-4xl font-bold mb-2">Территории промназначения</h1>
             <p class="text-base text-neutral-300 max-w-3xl">Производственные участки в 54 км от Москвы в жилом поселке Колюбакино. Удобный подъезд по Минскому и Новорижскому шоссе, асфальтированная дорога прямо к участкам, надежное бетонное ограждение. Все коммуникации подведены — идеальное решение для логистического центра, складского комплекса или производства.</p>
         </header>
 
-        <div class="absolute inset-0 max-w-5xl mx-auto py-48 sm:py-16 md:py-8 -z-10">
-            <img src="./mapimage.png">
+        <div class="absolute inset-0 mx-auto max-w-6xl pt-72 sm:pt-20 md:pt-12 -z-10">
+            <img src="mapimage.png">
         </div>
 
         <!-- Карточки с информацией -->
-        <div class="grid md:grid-cols-2 gap-4">
+        <div class="grid sm:grid-cols-2 gap-4">
             <!-- Карточка 1 -->
             <a href="https://www.avito.ru/tuchkovo/zemelnye_uchastki/uchastok_163ga_promnaznacheniya_3888785950" class="flex flex-col block no-underline p-1 border rounded-2xl transition-transform duration-500 hover:scale-105" style="background-color: #2A2A2A; border-color: #494949; box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);">
                 <div class="relative rounded-xl p-4 text-center" style="background-color: #1E1E1E; box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.2);">
@@ -68,14 +68,55 @@
                     <p class="text-xl font-bold mb-2 text-right">39 500 000 ₽</p>
                 </div>
             </a>
+        </div>
 
-            <a href="tel:+1234567890" class="inline-flex items-center justify-center bg-emerald-500 text-white text-lg hover:bg-emerald-600 transition-all fixed bottom-4 right-4 text-white px-6 py-3 rounded-2xl shadow-lg"">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone mr-2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
-                +1234567890
-              </a>
-   
+        <div class="py-10">
+            <h2 class="text-2xl font-bold mb-0">Возможности для бизнес-проектов</h2>
+            <p class="text-base text-neutral-300 max-w-lg">Благодаря подведенным комунникациям земли готовы к реализации следующих типов проектов:</p>
+            
+            <div class="grid sm:grid-cols-3 gap-4 py-4">
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Складской комплекс</p>
+                    <p class="mt-1 text-sm text-emerald-500">Оптимальное решение для хранения продукции и логистики. Удобные подъездные пути и транспортные развязки обеспечат бесперебойную работу вашего склада.</p>
+                </div>
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Производственный цех</p>
+                    <p class="mt-1 text-sm text-emerald-500">Идеально для размещения производственных линий. Достаточная площадь и возможность подключения коммуникаций — все для организации стабильных процессов.</p>
+                </div>
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Логистический хаб</p>
+                    <p class="mt-1 text-sm text-emerald-500">Удобный доступ к ключевым трассам идеально подходит для распределения грузов, организации складского комплекса и транспортного узла.</p>
+                </div>
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Долгосрочные инвестиции</p>
+                    <p class="mt-1 text-sm text-emerald-500">Активно развивающийся регион Подмосковья открывает возможности для роста капитала и создания доходных коммерческих объектов.</p>
+                </div>
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Сель-хоз проект</p>
+                    <p class="mt-1 text-sm text-emerald-500">Организация тепличных комплексов, ферм или перерабатывающих предприятий.</p>
+                </div>
+
+                <div class="rounded-2xl border border-emerald-500 flex flex-col p-3">
+                    <p class="text-emerald-500 font-bold mb-0" style="font-size: 1.125rem; line-height: initial;">Жилая застройка</p>
+                    <p class="mt-1 text-sm text-emerald-500">Строительство жилых комплексов или апартаментов вблизи инфраструктуры (при изменении зонирования).</p>
+                </div>
+
+            </div>
 
         </div>
+
+        <a href="tel:+1234567890" class="inline-flex items-center justify-center bg-emerald-500 text-white text-lg hover:bg-emerald-600 transition-all fixed bottom-4 right-4 text-white px-6 py-3 rounded-2xl shadow-lg"">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone mr-2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+            +1234567890
+        </a>
+   
+
+
     </section>
 </body>
 </html>
